# opaque-ke

./: .gitignore  AGENTS.md  Cargo.toml  JS_CLARIFICATIONS.md  Plan.md  README.md
.github/workflows/: python-ci.yml  python-wheels.yml  release.yml
docs/: JS_README.md  python.md
python/opaque_ke_py/: Cargo.toml  README.md  pyproject.toml
python/opaque_ke_py/python/opaque_ke/: __init__.py
python/opaque_ke_py/src/: ciphersuites.rs  client.rs  encoding.rs  errors.rs  lib.rs  login.rs  py_utils.rs  registration.rs  server.rs  suite.rs  types.rs
python/opaque_ke_py/tests/: conftest.py  test_encoding.py  test_errors.py  test_js_interop.py  test_roundtrip.py  test_serialization.py
python/opaque_ke_py/tests/js/: README.md  interop.mjs  package.json
src/: errors.rs
src/key_exchange/sigma_i/: shared.rs
